src/objects/z_ChildRelationship__c.object
<CustomObject>
    <description>Created by the Metadata API</description>
    <fields>
        <fullName>Lcm_ChildIsQueryable__c</fullName>
        <formula>z_ChildSObjectDescription__r.isQueryable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lcm_ChildIsQueryable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>childobjectname__c</fullName>
        <label>Child Object Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fieldname__c</fullName>
        <label>Child Field</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isCascadeDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCascadeDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>z_ChildSObjectDescription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Object</label>
        <referenceTo>z_SObjectDescription__c</referenceTo>
        <relationshipLabel>Relations (Child SObject)</relationshipLabel>
        <relationshipName>z_ChildRelationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>z_ParentSObjectDescription__c</fullName>
        <label>Parent Object</label>
        <referenceTo>z_SObjectDescription__c</referenceTo>
        <relationshipLabel>Relations (Parent SObject)</relationshipLabel>
        <relationshipName>z_ChildRelationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Relation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>z_ParentSObjectDescription__c</columns>
        <columns>z_ChildSObjectDescription__c</columns>
        <columns>fieldname__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>ChildRelation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>